@@ -20,7 +20,6 @@ package org.apache.solr.handler.admin;
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Map;
 import java.util.Set;
 import java.util.TreeMap;
@@ -78,7 +77,7 @@ public class ColStatus {
     if (col == null) {
       collections = clusterState.getCollectionNames();
     } else {
-      collections = Collections.singleton(col);
+      collections = Set.of(col);
     }
     boolean withFieldInfo = props.getBool(FIELD_INFO_PROP, false);
     boolean withCoreInfo = props.getBool(CORE_INFO_PROP, false);
